--- a/TP-2.csproj
+++ b/TP-2.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entidades\Funciones.cs" />
     <Compile Include="FormsDistros\DistroExponencial.cs">
       <SubType>Form</SubType>
     </Compile>
